<resources>
    <string name="app_name">MyApplication</string>
    <string name="main_title_record">Bievenido al Sistema</string>
    <string name="email">Correo Electronico : </string>
    <string name="add_email">Ingrese su correo</string>
    <string name="password">Contraseña :</string>
    <string name="confirm_password">Confirmar Contraseña :</string>
    <string name="add_password">Ingrese su contraseña</string>
    <string name="get_into">Ingresar</string>
    <string name="login">Registrarse</string>
    <string name="user">Nombre : </string>
    <string name="add_user">Ingrese su nombre</string>
    <string name="login_from">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="main_list">Datos del usuario</string>
    <string name="user_list">Nombre : Jaime Arnaldo</string>
    <string name="email_list">Correo : dubidubi@gmail.com</string>
    <string name="add">Agregar</string>
    <string name="kick">Cancelar</string>
</resources>