<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/viewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/main_title_record"
        android:textColor="@color/blue"
        android:textSize="26sp"
        app:drawableRightCompat="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textSize="22sp"
        app:drawableRightCompat="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTitle" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:background="@color/white_two"
        android:textColor="@color/black"
        android:lineSpacingExtra="8sp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/add_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail" />

    <TextView
        android:id="@+id/viewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textSize="22sp"
        app:drawableRightCompat="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@color/white_two"
        android:ems="10"
        android:hint="@string/add_password"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPassword" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/get_into"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registarFrm"
        style="?attr/borderlessButtonStyle"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar"/>

</androidx.constraintlayout.widget.ConstraintLayout>