<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuarios">

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textSize="22sp"
        app:drawableRightCompat="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmailFrom"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:background="@color/white_two"
        android:ems="10"
        android:hint="@string/add_email"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="8sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail" />

    <TextView
        android:id="@+id/viewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textSize="22sp"
        app:drawableRightCompat="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserFrom" />

    <TextView
        android:id="@+id/viewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/confirm_password"
        android:textSize="22sp"
        app:drawableRightCompat="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordFrom" />

    <EditText
        android:id="@+id/txtPasswordFrom"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:background="@color/white_two"
        android:ems="10"
        android:hint="@string/add_password"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPassword" />

    <EditText
        android:id="@+id/txtConfirmPasswordFrom"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:background="@color/white_two"
        android:ems="10"
        android:hint="@string/add_password"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewConfirmPassword" />

    <TextView
        android:id="@+id/viewUser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/user"
        android:textSize="22sp"
        app:drawableRightCompat="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailFrom" />

    <EditText
        android:id="@+id/txtUserFrom"
        android:layout_width="265dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:background="@color/white_two"
        android:ems="10"
        android:hint="@string/add_user"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="8sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewUser" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="136dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:text="@string/login_from"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPasswordFrom" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="136dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/btnRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPasswordFrom" />


</androidx.constraintlayout.widget.ConstraintLayout>